laboutput.txt
  File "/home/sourav/ops445/lab2/./CheckLab2.py", line 445
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
